# hexis-hermes-guardrail

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: identity.json
.claude/homunculus/instincts/inherited/: hexis-hermes-guardrails-instincts.yaml
.codex/: AGENTS.md
.github/workflows/: publish.yml  tests.yml
guardcore/: hook.py
hexis/: .gitignore  README.md  SKILL.md  __init__.py  guards.py  plugin.yaml  violations.py
hexis_hermes_guardrails/: __init__.py  cli.py  platforms.py
scripts/: install.sh  smoke-test.sh  uninstall.sh  verify_live_runtime.py
tests/: __init__.py  test_guards.py  test_hook.py  test_installer.py
